// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array of options objects merge every options object included in the array with the default options 1`] = `
[
  {
    "clean": true,
    "dts": true,
  },
  {
    "clean": false,
    "dts": true,
  },
]
`;

exports[`array of options objects when a format array is provided, do not merge the provided array with the default format array 1`] = `
[
  {
    "format": [
      "cjs",
    ],
  },
]
`;

exports[`array of options objects when a provided option match a default option, override the default option 1`] = `
[
  {
    "dts": false,
    "entry": [
      "./toto",
    ],
  },
  {
    "clean": false,
    "dts": true,
    "entry": [
      "./toto",
    ],
  },
]
`;

exports[`array of options objects when an empty array is provided, returns the default options 1`] = `
{
  "dts": true,
}
`;

exports[`function merge the options returned by the function with the default options 1`] = `
{
  "clean": true,
  "dts": true,
}
`;

exports[`function when a format array is provided, do not merge the provided array with the default format array 1`] = `
{
  "format": [
    "cjs",
  ],
}
`;

exports[`function when a provided option match a default option, override the default option 1`] = `
{
  "dts": false,
  "entry": [
    "./toto",
  ],
}
`;

exports[`single object of options merge provided options with the default options 1`] = `
{
  "clean": true,
  "dts": true,
}
`;

exports[`single object of options when a format array is provided, do not merge the provided array with the default format array 1`] = `
{
  "format": [
    "cjs",
  ],
}
`;

exports[`single object of options when a provided option match a default option, override the default option 1`] = `
{
  "dts": false,
  "entry": [
    "./toto",
  ],
}
`;

exports[`when no options are provided, return the default options 1`] = `
{
  "dts": true,
}
`;
